public/stylesheet/stylesheet.css
/* //////////  FORM STYLING  //////////*/
input[type="radio"]{
  padding-top: -10;
}

/* //////////  LAYOUT STYLING  //////////*/
body {
  font-family: 'Poppins', sans-serif;
  font-size: 14px;
  font-weight: 200;
  letter-spacing: 0.5px;
  line-height: 2;
  margin: 0;
  background-image: "marble.png";
  background-repeat: repeat-x;
  background-position: center;
  background-attachment: fixed;

a {
  color: #ae9d78;
  text-decoration: none;
}

a:hover {
  color: #333;
}

p {
  margin: 0 0 28px;
  padding: 0;
}

ol, ul {
  margin: 0;
  padding: 0;
}

b, strong{
  font-weight: 700;
}


/*//////////  HEADINGS  //////////*/
h1,
h2,
h3,
h4,
h5,
h6 {
  color: #333;
  font-family: 'Fredoka One', cursive;
  font-style: normal;
  font-weight: 400;
  letter-spacing: 0.5px;
  line-height: 1.2px;
  margin: 0 0 25px;
}

h1 {
  font-size: 30px;
  text-transform: capitalize;

}

h2 {
  font-size: 24px;
  text-transform: uppercase;

}

h3 {
  font-size: 20px;
  text-transform: capitalize;
}

h4 {
  font-size: 18px;
  text-transform: uppercase;
}

h5 {
  font-size: 16px;
  text-trasnform: capitalize;
}

h6 {
  font-size: 16px;
  text-transform: uppercase;
}


/* /////////// NAVBAR //////////*/
nav div.container {
  border-style: solid;
  border-width: 5px;
  border-color: #F1F1F1
  height: 1px;
  margin-bottom: 0px;
  padding: 5px;
  position: absolute;
}

div.container.home.restaurants{
  background-color: gray;
}

/* //////// SIGN UP FORM ///////*/
body {
  background-color: #fff;
  -webkit-font-smoothing: antialiased;
  font: normal 14px;
}
.container {
  padding: 25px;
  position: fixed;
}

.form-login{
  background-color: #EDEDED;
  padding-top: 10px;
  padding-bottom: 20px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 15px;
  border-color: #d2d2d2;
  border-width: 5px;
  box-shadow: 0 1px 0 #cfcfcf;
}

h4 {
  border:0 solid #fff;
  border-bottom-width:1px;
  padding-bottom: 10px;
  text-align: center;
}

.form-control {
  border-radius: 10px;
}

.wrapper{
  text-align: center;
}

